(Osmose.java) Renamed a few variables in methods initializeSpeciesAreas ans readMigrationFile
(Osmose.java & Simulation.java)
Added comments after visiting Morgane in Boulogne.

git-svn-id: https://subversion.renater.fr/authscm/barrier.n/svn/osmose/trunk@152 45b28200-7c74-4d1a-96bc-342942c5875a